# game-of-life

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix
src/: engine.c  logger.c  main.c  world.c
src/include/: config.h  engine.h  logger.h  world.h
